--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.3.2
 diff-match-patch==20230430
 Django==5.1
 django-import-export==4.1.1
 django-recaptcha==4.0.0
+idna==3.10
 pillow==10.4.0
 PyYAML==6.0.2
+requests==2.32.3
 sqlparse==0.5.1
 tablib==3.5.0
 tzdata==2024.1
 ua-parser==0.18.0
+urllib3==2.2.3
 user-agents==2.2.0
