Refactor deployment process by moving git commands from deploy.sh to deploy.yml for improved workflow efficiency

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,9 @@ jobs:
         password: ${{ secrets.SERVER_PASSWORD }}
         port: 22
         script: |
+          cd /mnt/portfolio
+          git fetch origin
+          git reset --hard origin/master
+          git clean -fd
+          git pull
           bash /mnt/portfolio/deploy.sh
