--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
         port: 22
         script: |
           cd /mnt/portfolio
+          export GIT_SSH_COMMAND='ssh -i /mnt/portfolio/github_deploy_key -o IdentitiesOnly=yes'
           git fetch origin
           git reset --hard origin/master
           git clean -fd
