--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     build: .
     command: >
-      sh -c "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn root.wsgi:application --bind 0.0.0.0:8080"
+      sh -c "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn -c gunicorn.conf.py root.wsgi:application"
     ports:
       - "8080:8080"
     volumes:
