--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.523.0",
     "shadcn-ui": "^0.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
