--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,10 @@ services:
       - "8080:8080"
     volumes:
       - ./app/nginx.conf:/etc/nginx/conf.d/default.conf
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - "54832:8000"
