fixed auto deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         script: |
           cd /mnt/portfolio
           export GIT_SSH_COMMAND='ssh -i /mnt/github_deploy_key -o IdentitiesOnly=yes'
+          git remote set-url origin git@github.com:W-Mirshod/portfolio.git
           git fetch origin
           git reset --hard origin/master
           git clean -fd
