--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,15 +23,14 @@ jobs:
         script: |
           cd /mnt/portfolio
           export GIT_SSH_COMMAND='ssh -i /mnt/github_deploy_key -o IdentitiesOnly=yes'
+          
           git remote set-url origin git@github.com:W-Mirshod/portfolio.git
           git fetch origin
           git reset --hard origin/master
           git clean -fd
-          git pull
+          
           docker-compose build
-          if docker-compose run --rm portfolio true; then
-            docker-compose down || true
-            docker-compose up -d --build
-          else
-            echo 'Build failed, keeping existing running container.'
+          if docker-compose ps | grep -q portfolio; then
+            docker-compose down
           fi
+          docker-compose up -d --build
