--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,14 @@ jobs:
         script: |
           cd /mnt/portfolio
           export GIT_SSH_COMMAND='ssh -i /mnt/github_deploy_key -o IdentitiesOnly=yes'
+          export DOCKER_BUILDKIT=1
           
           git remote set-url origin git@github.com:W-Mirshod/portfolio.git
           git fetch origin
           git reset --hard origin/master
           git clean -fd
+          
+          npm install tsparticles
           
           docker-compose build
           if docker-compose ps | grep -q portfolio; then
