--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,8 @@
     "react-i18next": "^15.5.3",
     "react-router-dom": "^7.6.2",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
