--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "@tsparticles/react": "^3.0.0",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.523.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-tooltip": "^5.29.1",
     "react-tsparticles": "^2.12.2",
+    "tsparticles-slim": "^2.12.0",
     "shadcn-ui": "^0.9.5",
     "three": "^0.177.0",
-    "tsparticles": "^3.8.1"
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
+  },
+  "scripts": {
+    "build": "vite build"
   }
 }
