--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
-    "framer-motion": "^12.19.1",
+    "framer-motion": "^12.19.2",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-tooltip": "^5.29.1",
     "react-tsparticles": "^2.12.2",
-    "tsparticles-slim": "^2.12.0",
     "shadcn-ui": "^0.9.5",
     "three": "^0.177.0",
-    "tsparticles": "^2.12.0"
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
