feat: add Change Password functionality and update admin authentication flow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,5 @@ services:
     restart: always
     ports:
       - "54832:8000"
+    volumes:
+      - ./backend/admin_auth.json:/app/admin_auth.json
