--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: '3'
 services:
   portfolio:
     build:
-      context: ./app
+      context: ./frontend
       dockerfile: Dockerfile
     restart: always
     ports:
       - "8080:8080"
     volumes:
-      - ./app/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
   backend:
     build:
       context: ./backend
