refactor: remove admin authentication components and update backend to use Django
- Deleted admin authentication files including `admin_auth.json`, `admin_auth.py`, and related frontend components.
- Updated `Dockerfile` to install Django and Gunicorn, replacing Uvicorn.
- Adjusted `docker-compose.yml` to mount media and static directories for Django.
- Modified `requirements.txt` to include Django and remove FastAPI dependencies.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     networks:
       - web
     volumes:
+      - ./backend/media:/app/media
+      - ./backend/static:/app/static
       - ./backend/admin_auth.json:/app/admin_auth.json
 
 networks:
