--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.11-slim
 WORKDIR /app
 COPY . .
-RUN pip install --no-cache-dir -r requirements.txt
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+RUN pip install --no-cache-dir django
+RUN pip install --no-cache-dir gunicorn
+EXPOSE 8000
+CMD ["gunicorn", "root.wsgi:application", "--bind", "0.0.0.0:8000"] 
