feat: enhance backend functionality with new models, views, and admin integration
- Added new models: Project, Experience, SkillCategory, Organization, TechStackItem, and TerminalLine.
- Implemented corresponding viewsets for RESTful API access using Django REST Framework.
- Registered models in the Django admin with import/export capabilities.
- Updated Dockerfile to include djangorestframework and entrypoint script for migrations.
- Modified requirements.txt to include new dependencies.
- Configured URLs to include API routes for the app.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,12 @@
 FROM python:3.11-slim
 WORKDIR /app
 COPY . .
-RUN pip install --no-cache-dir django
+RUN pip install --no-cache-dir django djangorestframework
 RUN pip install --no-cache-dir gunicorn
 EXPOSE 8000
-CMD ["gunicorn", "root.wsgi:application", "--bind", "0.0.0.0:8000"] 
+
+# Entrypoint script to run migrations and create superuser
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+CMD ["/entrypoint.sh"] 
