--- a/.gitignore
+++ b/.gitignore
@@ -9,28 +9,11 @@ __pycache__/
 # Distribution / packaging
 .Python
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
 *.egg-info/
-.installed.cfg
+.eggs/
 *.egg
 MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
 # Installer logs
 pip-log.txt
@@ -40,16 +23,10 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .nox/
-.coverage
-.coverage.*
+.coverage*
 .cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
 .pytest_cache/
-pytest_cache/
-cover/
+.hypothesis/
 
 # Translations
 *.mo
@@ -58,23 +35,18 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
+db.sqlite3*
+media/
+portfolio/migrations/
 
 # Flask stuff:
 instance/
 .webassets-cache
 
-# Scrapy stuff:
-.scrapy
-
 # Sphinx documentation
-docs/_build/
-docs/_static/
-docs/_autosummary/
-
-# PyBuilder
-target/
+/docs/_build/
+/docs/_static/
+/docs/_autosummary/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -89,32 +61,23 @@ ipython_config.py
 # celery beat schedule file
 celerybeat-schedule.*
 
-# SageMath parsed files
-*.sage.py
-
 # dotenv
 .env
 .env.*
 
 # virtualenv
-.idea
-.venv
+.venv/
 venv/
 ENV/
 env/
 env.bak/
 venv.bak/
 
-# extras
-media/
-portfolio/migrations/
-
-
-# Spyder project settings
+# IDEs and editors
+.idea/
+.vscode/
 .spyderproject
 .spyproject
-
-# Rope project settings
 .ropeproject
 
 # mkdocs documentation
@@ -128,17 +91,21 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# React/Vite build output
+# React/Vite/Node build output
 /node_modules/
 .env.local
 /.env.development.local
 /.env.test.local
 /.env.production.local
 /dist/
-# Vite cache
-/.vite/deps
-# React editor files
+/.vite/
+
+# Log files
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
