refactor: update backend configuration and dependencies
- Changed Dockerfile to install dependencies from requirements.txt and added static file collection.
- Updated docker-compose.yml to map port 7007 to the backend service.
- Modified entrypoint script to include static file collection during startup.
- Enhanced settings.py to configure Whitenoise for static file handling and updated allowed hosts.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.11-slim
 WORKDIR /app
 COPY . .
-RUN pip install --no-cache-dir django djangorestframework
-RUN pip install --no-cache-dir gunicorn
+RUN pip install --no-cache-dir -r requirements.txt
+RUN python manage.py collectstatic --noinput
 EXPOSE 8000
 
 # Entrypoint script to run migrations and create superuser
