--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,8 +4,61 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Enable gzip compression for faster loading
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/json
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml;
+
+    # Cache static assets aggressively
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header X-Content-Type-Options nosniff;
+
+        # CORS headers for fonts
+        location ~* \.(woff|woff2|ttf|eot)$ {
+            add_header Access-Control-Allow-Origin *;
+        }
+    }
+
+    # Cache HTML files for shorter time (for updates)
+    location ~* \.(html)$ {
+        expires 1h;
+        add_header Cache-Control "public, max-age=3600";
+    }
+
+    # Main location block
     location / {
         try_files $uri $uri/ /index.html;
+
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        # Preload critical resources
+        location = / {
+            add_header Link "</assets/index-CS5VJEeH.js>; rel=preload; as=script" always;
+        }
+    }
+
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
     }
 
     error_page 500 502 503 504 /50x.html;
