feat: enhance performance and resource management in frontend
- Updated index.html to include critical resource preconnects and preloads for improved loading times.
- Enhanced nginx configuration with HTTP/2 server push for critical resources and optimized gzip compression settings.
- Improved Vite configuration for better chunk management and optimized dependency handling.
- Refactored App component to include performance monitoring and optimized loading of Font Awesome.
- Updated CSS styles for better performance and GPU acceleration in animations.

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,11 +4,12 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Enable gzip compression for faster loading
+    # Enhanced gzip compression for faster loading
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_proxied expired no-cache no-store private auth;
+    gzip_comp_level 6;
     gzip_types
         text/plain
         text/css
@@ -18,24 +19,52 @@ server {
         application/json
         application/xml+rss
         application/atom+xml
-        image/svg+xml;
+        image/svg+xml
+        application/x-font-ttf
+        application/vnd.ms-fontobject
+        font/woff
+        font/woff2;
 
-    # Cache static assets aggressively
+    # HTTP/2 Server Push for critical resources
+    location = / {
+        try_files $uri $uri/ /index.html;
+        
+        # Push critical resources
+        http2_push /src/main.jsx;
+        http2_push /src/App.jsx;
+        http2_push /Mirshod-optimized.webp;
+        
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        
+        # Performance headers
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-DNS-Prefetch-Control "on" always;
+    }
+
+    # Cache static assets aggressively with versioning
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         add_header X-Content-Type-Options nosniff;
-
+        
         # CORS headers for fonts
         location ~* \.(woff|woff2|ttf|eot)$ {
             add_header Access-Control-Allow-Origin *;
         }
+        
+        # Add resource timing headers
+        add_header Timing-Allow-Origin "*" always;
     }
 
     # Cache HTML files for shorter time (for updates)
     location ~* \.(html)$ {
         expires 1h;
         add_header Cache-Control "public, max-age=3600";
+        add_header X-Content-Type-Options nosniff;
     }
 
     # Main location block
@@ -48,10 +77,9 @@ server {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # Preload critical resources
-        location = / {
-            add_header Link "</assets/index-CS5VJEeH.js>; rel=preload; as=script" always;
-        }
+        # Performance headers
+        add_header X-DNS-Prefetch-Control "on" always;
+        add_header Timing-Allow-Origin "*" always;
     }
 
     # Health check endpoint
@@ -59,6 +87,13 @@ server {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
+    }
+
+    # Performance monitoring endpoint (dev only)
+    location /perf {
+        access_log off;
+        return 200 '{"status":"performance monitoring enabled"}';
+        add_header Content-Type application/json;
     }
 
     error_page 500 502 503 504 /50x.html;
