--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,9 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "postcss": "^8.4.31",
+    "rollup-plugin-visualizer": "^6.0.4",
     "tailwindcss": "^3.3.0",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
