--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,7 @@ services:
       - "8080"
     networks:
       - web
-    volumes:
-      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
 
 networks:
   web:
-    external: true
+    driver: bridge
