fix: update docker-compose to use ports instead of expose for frontend service
- Changed the configuration from using 'expose' to 'ports' for the frontend service to ensure proper port mapping for external access.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     restart: always
-    expose:
-      - "8080"
+    ports:
+      - "8080:8080"
     networks:
       - web
 
