--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,11 +3,10 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
-    restart: unless-stopped
     ports:
-      - "5173:5173"
+      - "3000:5173"
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app:Z
       - /app/node_modules
     environment:
       - NODE_ENV=development
@@ -15,6 +14,7 @@ services:
       - web
     stdin_open: true
     tty: true
+    privileged: true
 
 networks:
   web:
