chore: set container name for frontend service in docker-compose.yml
- Added a specific container name "portfolio-portfolio-1" for the frontend service to improve container management and identification.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    container_name: portfolio-portfolio-1
     restart: always
     ports:
       - "8080:8080"
