chore: update Docker configuration for frontend service
- Changed the port mapping for the frontend service from 3000 to 3001 in docker-compose.dev.yml to avoid conflicts.
- Modified the Dockerfile.dev to ensure dependencies are installed only if they are missing, improving the startup process for the development server.

--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -4,8 +4,9 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install || true
+RUN npm install
 
 EXPOSE 5173
 
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+# Install dependencies if node_modules doesn't exist, then start dev server
+CMD sh -c "if [ ! -d 'node_modules' ] || [ ! -f 'node_modules/.bin/vite' ]; then npm install; fi && npm run dev -- --host 0.0.0.0"
