refactor: update Experience component and project URL for improved accuracy
- Increased the LinkedIn connections count in the Experience component to reflect current data.
- Updated the project URL in projects.json to direct users to the documentation page, enhancing clarity and accessibility.

--- a/frontend/src/data/projects.json
+++ b/frontend/src/data/projects.json
@@ -41,7 +41,7 @@
       "REST",
       "WebSockets"
     ],
-    "url": "https://mini-crm.w-mirshod.com/"
+    "url": "https://mini-crm.w-mirshod.com/docs"
   },
   {
     "id": 4,
