--- a/frontend/src/data/projects.json
+++ b/frontend/src/data/projects.json
@@ -56,7 +56,7 @@
       "Authentication",
       "Admin dashboard"
     ],
-    "url": "https://ai.w-mirshod.com/"
+    "url": "https://typescript-chat.w-mirshod.com/"
   },
   {
     "id": 5,
@@ -85,6 +85,6 @@
       "RBAC",
       "API documentation"
     ],
-    "url": "https://aqilli-maktab.w-mirshod.com/"
+    "url": "https://aqilli-maktab.w-mirshod.com/swagger/"
   }
 ]
