refactor: update project technologies in projects.json for accuracy
- Replaced "RBAC" and "API documentation" with "API Swagger" in the technologies list for improved clarity and specificity regarding project features.

--- a/frontend/src/data/projects.json
+++ b/frontend/src/data/projects.json
@@ -82,8 +82,7 @@
       "Python",
       "PostgreSQL",
       "REST API",
-      "RBAC",
-      "API documentation"
+      "API Swagger"
     ],
     "url": "https://aqilli-maktab.w-mirshod.com/swagger/"
   }
