--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
