--- a/frontend/src/data/projects.json
+++ b/frontend/src/data/projects.json
@@ -1,5 +1,19 @@
 [
   {
+    "id": 2,
+    "title": "Taffi AI",
+    "description": "AI cosmetics platform using a YOLO face-analysis pipeline. Built and deployed the CV model and full FastAPI inference workflow.",
+    "icon": "fas fa-code",
+    "technologies": [
+      "YOLO",
+      "FastAPI",
+      "Python",
+      "Docker",
+      "GPU inference stack"
+    ],
+    "url": "https://taffi.ai/"
+  },
+  {
     "id": 1,
     "title": "Yaklabs IoT Platform",
     "description": "IoT backend for device provisioning, telemetry ingestion, and real-time analytics. Built core architecture, Flask services, and PyTorch models.",
@@ -13,20 +27,6 @@
       "IoT integrations"
     ],
     "url": "https://yaklabs.tech/"
-  },
-  {
-    "id": 2,
-    "title": "Taffi",
-    "description": "AI cosmetics platform using a YOLO face-analysis pipeline. Built and deployed the CV model and full FastAPI inference workflow.",
-    "icon": "fas fa-code",
-    "technologies": [
-      "YOLO",
-      "FastAPI",
-      "Python",
-      "Docker",
-      "GPU inference stack"
-    ],
-    "url": "https://taffi.ai/"
   },
   {
     "id": 3,
